# RobotisSoccer2

./: .gitignore  CLAUDE.md  README.md  remove_nested_git.py  robotis_cli.py
docs/: 001_increase_swap.md  002_cyclonedds_fix.md  003_hardware_connection_guide.md  004_op3_troubleshooting.md  005_op3_simulation_guide.md  006_quick_simulation_setup.md  007_wslg_setup_guide.md  008_op3_simulation_research_findings.md  009_webots_simulation_setup_guide.md  010_working_simulation_commands.md  011_wsl2_x11_forwarding_setup.md  012_pip_installation_guide.md  013_virtual_environment_setup.md
src/ROBOTIS-Framework-msgs/robotis_controller_msgs/: CMakeLists.txt  package.xml
src/ROBOTIS-Framework/robotis_controller/: CMakeLists.txt  package.xml
src/ROBOTIS-Framework/robotis_controller/include/robotis_controller/: robotis_controller.h
src/ROBOTIS-Framework/robotis_controller/src/robotis_controller/: robotis_controller.cpp
src/ROBOTIS-Framework/robotis_device/: CMakeLists.txt  package.xml
src/ROBOTIS-Framework/robotis_device/src/robotis_device/: robot.cpp
src/ROBOTIS-Framework/robotis_framework_common/: CMakeLists.txt  package.xml
src/ROBOTIS-Math/robotis_math/: CMakeLists.txt  package.xml
src/ROBOTIS-OP3/: .gitignore
src/ROBOTIS-OP3-Common/op3_description/: CMakeLists.txt  package.xml
src/ROBOTIS-OP3-Common/op3_description/rviz/: op3.rviz
src/ROBOTIS-OP3-Common/op3_description/urdf/: robotis_op3.gazebo.xacro  robotis_op3.structure.head.xacro  robotis_op3.structure.larm.xacro  robotis_op3.structure.lleg.xacro  robotis_op3.structure.rarm.xacro  robotis_op3.structure.rleg.xacro  robotis_op3.urdf.xacro
src/ROBOTIS-OP3-Demo/op3_ball_detector/: CMakeLists.txt  package.xml
src/ROBOTIS-OP3-Demo/op3_ball_detector/cfg/: DetectorParams.cfg
src/ROBOTIS-OP3-Demo/op3_ball_detector/config/: ball_detector_params.yaml  ball_detector_params_default.yaml  ball_detector_params_op.yaml  camera_param.yaml
src/ROBOTIS-OP3-Demo/op3_ball_detector/include/op3_ball_detector/: ball_detector.h  ball_detector_config.h  detector_params_config.h
src/ROBOTIS-OP3-Demo/op3_ball_detector/launch/: ball_detector_from_usb_cam.launch.py
src/ROBOTIS-OP3-Demo/op3_ball_detector/src/: ball_detector.cpp  ball_detector_node.cpp
src/ROBOTIS-OP3-Demo/op3_bringup/: CMakeLists.txt  package.xml
src/ROBOTIS-OP3-Demo/op3_bringup/launch/: op3_bringup.launch.py  op3_bringup_visualization.launch.py
src/ROBOTIS-OP3-Demo/op3_demo/: CMakeLists.txt  package.xml
src/ROBOTIS-OP3-Demo/op3_demo/include/op3_demo/: action_demo.h  ball_follower.h  ball_tracker.h  button_test.h  face_tracker.h  mic_test.h  op_demo.h  soccer_demo.h  vision_demo.h
src/ROBOTIS-OP3-Demo/op3_demo/launch/: demo.launch.xml  face_detection_op3.launch.xml  self_test.launch.xml
src/ROBOTIS-OP3-Demo/op3_demo/list/: action_script.yaml  action_script_bk.yaml
src/ROBOTIS-OP3-Demo/op3_demo/src/: demo_node.cpp  test_node.cpp
src/ROBOTIS-OP3-Demo/op3_demo/src/action/: action_demo.cpp
src/ROBOTIS-OP3-Demo/op3_demo/src/soccer/: ball_follower.cpp  ball_tracker.cpp  soccer_demo.cpp
src/ROBOTIS-OP3-Demo/op3_demo/src/test/: button_test.cpp  mic_test.cpp
src/ROBOTIS-OP3-Demo/op3_demo/src/vision/: face_tracker.cpp  vision_demo.cpp
src/ROBOTIS-OP3-Demo/op3_read_write_demo/: CMakeLists.txt  package.xml
src/ROBOTIS-OP3-Demo/op3_read_write_demo/launch/: op3_read_write.launch.xml
src/ROBOTIS-OP3-Demo/op3_read_write_demo/src/: read_write.cpp
src/ROBOTIS-OP3-ETC/: README.md
src/ROBOTIS-OP3-ETC/face_detection/: CMakeLists.txt  package.xml
src/ROBOTIS-OP3-ETC/face_detection/launch/: face_tracking.launch.py
src/ROBOTIS-OP3-ETC/face_detection/src/: face_tracking.cpp
src/ROBOTIS-OP3-ETC/usb_cam/: CHANGELOG.rst  package.xml
src/ROBOTIS-OP3-ETC/usb_cam/config/: params_1.yaml  params_2.yaml
src/ROBOTIS-OP3-ETC/usb_cam/include/usb_cam/: usb_cam.hpp
src/ROBOTIS-OP3-ETC/usb_cam/src/: usb_cam_node.cpp
src/ROBOTIS-OP3-msgs/op3_action_module_msgs/: CMakeLists.txt  package.xml
src/ROBOTIS-OP3-msgs/op3_ball_detector_msgs/: CMakeLists.txt  package.xml
src/ROBOTIS-OP3-msgs/op3_camera_setting_tool_msgs/: CMakeLists.txt  package.xml
src/ROBOTIS-OP3-msgs/op3_camera_setting_tool_msgs/msg/: CameraParams.msg
src/ROBOTIS-OP3-msgs/op3_offset_tuner_msgs/: CMakeLists.txt  package.xml
src/ROBOTIS-OP3-msgs/op3_online_walking_module_msgs/: CMakeLists.txt  package.xml
src/ROBOTIS-OP3-msgs/op3_tuning_module_msgs/: CMakeLists.txt  package.xml
src/ROBOTIS-OP3-msgs/op3_walking_module_msgs/: CMakeLists.txt  package.xml
src/ROBOTIS-OP3/op3_manager/launch/: op3_manager.launch.py  op3_simulation.launch.py
src/ROBOTIS-OP3/op3_manager/src/: op3_manager.cpp
src/ROBOTIS-OP3/op3_tuning_module/src/: tuning_module.cpp
src/ROBOTIS-OP3/op3_walking_module/config/: param.yaml
src/ROBOTIS-OP3/op3_walking_module/src/: op3_walking_module.cpp
src/ROBOTIS-OP3/open_cr_module/src/: open_cr_module.cpp
src/ROBOTIS-Utility/ros_madplay_player/: CMakeLists.txt  package.xml
src/ROBOTIS-Utility/ros_madplay_player/include/ros_madplay_player/: ros_madplay_player.h
src/ROBOTIS-Utility/ros_madplay_player/src/: ros_madplay_player.cpp
src/ROBOTIS-Utility/ros_mpg321_player/: CMakeLists.txt  package.xml
src/ROBOTIS-Utility/ros_mpg321_player/include/ros_mpg321_player/: ros_mpg321_player.h
src/ROBOTIS-Utility/ros_mpg321_player/src/: ros_mpg321_player.cpp
