<?xml version="1.0"?>
<package format="3">
  <name>robotis_controller</name>
  <version>0.2.9</version>
  <description>
    robotis_controller package for ROBOTIS's platform like Manipulator-H, THORMANG and OP series
  </description>
  <license>Apache-2.0</license>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <author email="zerom@robotis.com">Zerom</author>
  <author email="kmjung@robotis.com">Kayman</author>
  <author email="sch@robotis.com">SCH</author>
  <url type="website">http://wiki.ros.org/robotis_controller</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/software/robotis_framework_packages/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-Framework</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-Framework/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>robotis_controller_msgs</depend>
  <depend>dynamixel_sdk</depend>
  <depend>robotis_device</depend>
  <depend>robotis_framework_common</depend>
  <depend>yaml-cpp</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
