<?xml version="1.0"?>
<package format="3">
  <name>op3_ball_detector</name>
  <version>0.1.0</version>
  <description>
    This package implements a circle-like shape detector of the input image.
    It requires an input image and publishes, at frame rate, a marked image
    and a stamped array of circle centers and radius.
  </description>
  <license>Apache 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <author email="zerom@robotis.com">Zerom</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/op3_ball_detector</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/op3/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Demo</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Demo/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>boost</depend>  
  <depend>yaml-cpp</depend>
  <depend>op3_ball_detector_msgs</depend>
  <depend>ament_index_cpp</depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>uvc_camera</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
