<?xml version="1.0"?>
<package format="3">
  <name>op3_walking_module_msgs</name>
  <version>0.1.1</version>
  <description>
    This package includes ROS messages and services for the ROBOTIS OP3 packages
  </description>
  <license>Apache-2.0</license>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <author email="kmjung@robotis.com">Kayman</author>
  <url type="website">http://wiki.ros.org/op3_walking_module_msgs</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/op3/robotis_ros_packages/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Msgs</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Msgs/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
